[gd_scene load_steps=7 format=3 uid="uid://xv82r6mhk4x5"]

[ext_resource type="Script" uid="uid://b5ep5if383vj3" path="res://scripts/chess/board.gd" id="1_m5kr7"]
[ext_resource type="PackedScene" uid="uid://dldgguqclgyl8" path="res://scenes/chess/tile.tscn" id="2_w6gev"]
[ext_resource type="Script" path="res://scripts/chess/board_renderer.gd" id="4_6y3m1"]
[ext_resource type="Texture2D" uid="uid://clw4wtm4s1qki" path="res://assets/sprites/chess/chess-pieces.png" id="4_l1xyo"]
[ext_resource type="PackedScene" uid="uid://b5qaf8x74fqir" path="res://scenes/chess/cursor.tscn" id="5_l1xyo"]
[ext_resource type="PackedScene" uid="uid://bv27jfna3itot" path="res://scenes/chess/valid_move.tscn" id="6_ahlde"]

[node name="Board" type="Node2D"]
script = ExtResource("1_m5kr7")
piece_sprite_sheet = ExtResource("4_l1xyo")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="WhiteCursor" parent="." instance=ExtResource("5_l1xyo")]

[node name="BlackCursor" parent="." instance=ExtResource("5_l1xyo")]
team = 1

[node name="PiecesContainer" type="Node2D" parent="."]

[node name="BoardRenderer" type="Node2D" parent="."]
script = ExtResource("4_6y3m1")
tile_scene = ExtResource("2_w6gev")
valid_move_icon = ExtResource("6_ahlde")

[node name="TilesContainer" type="Node2D" parent="BoardRenderer"]
